feat/se agrega proyecto base con gestor de contenido y rss.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,27 @@
 ---
-
+import { getCollection } from "astro:content"
+import BaseLayout from "../layouts/BaseLayout.astro"
+const allPosts = await getCollection('posts')
 ---
 
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<BaseLayout pageTitle="Inicio">
+			<h1>Inicio</h1>
+			{
+				allPosts.map((post: any) => (
+					<article>
+						<h2>{post.data.title}</h2>
+						<p>{post.data.description}</p>
+					</article>
+				))
+			}
+		</BaseLayout>
 	</body>
 </html>
