fix/se corrige mal funcionamiento de navbar en modo responsive y de escritorio
feat/se agregan mejoras al layout para acercar su diseño al del figma

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,6 +3,6 @@ const platform = "github";
 const username = "VicenteJ20";
 ---
 
-<footer>
+<footer class='max-w-screen-2xl mx-auto text-center'>
   <p>Learn more about my projects on <a target="_blank" href={`https://www.${platform}.com/${username}`}>{platform}</a></p>
 </footer>
