--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,3 @@
----
-const platform = "github";
-const username = "VicenteJ20";
----
-
-<footer class='max-w-screen-2xl mx-auto text-center'>
-  <p>Learn more about my projects on <a target="_blank" href={`https://www.${platform}.com/${username}`}>{platform}</a></p>
+<footer class='w-full text-center justify-self-end'>
+  <p>&copy; 2024, Vicente Jorquera. Todos los derechos reservados.</p>
 </footer>
