--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -45,7 +45,7 @@ const { pageTitle } = Astro.props;
   <body class="bg-zinc-950 text-zinc-100 image-bg p-0">
     <main class="w-screen backdrop-blur-4xl p-0 min-h-screen" >
       <Header />
-      <section class='max-w-screen-2xl mx-auto px-8 pb-4 pt-[4.5rem]'>
+      <section class='max-w-screen-2xl mx-auto px-8 pb-4 pt-[4.5rem] min-h-[95vh]'>
         <slot />
       </section>
       <Footer />
