--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,3 @@
-<footer class='w-full text-center justify-self-end'>
+<footer class='max-w-screen-2xl mx-auto text-center justify-self-end py-4'>
   <p>&copy; 2024, Vicente Jorquera. Todos los derechos reservados.</p>
 </footer>
