--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,12 +1,57 @@
 ---
+import { Image } from "astro:assets";
 import BaseLayout from "./BaseLayout.astro";
+import SocialLinks from "../components/SocialLinks.astro";
 const { frontmatter } = Astro.props;
-
 ---
 
 <BaseLayout pageTitle={frontmatter.title}>
-  <h1>{frontmatter.title}</h1>
-  <p>Written by {frontmatter.author}</p>
-  <p><strong>{frontmatter.pubDate.toString().slice(0,10)}</strong></p>
+  <header class="py-6 flex flex-col gap-8">
+    <div class="flex flex-row gap-2 items-center text-lg">
+      <h3 class="capitalize text-lime-300">{frontmatter.type}</h3>
+      <div class="w-2 h-1 bg-zinc-300 rounded-lg"></div>
+      <h3 class="text-zinc-300">
+        Publicado el: {frontmatter.pubDate.toLocaleDateString("es-CL")}
+      </h3>
+    </div>
+    <div class="flex flex-col gap-1.5">
+      <h2 class="text-2xl md:text-3xl lg:text-4xl font-semibold">
+        {frontmatter.title} :
+      </h2>
+      <h1 class="text-2xl md:text-3xl lg:text-4xl font-semibold">
+        {frontmatter.fullTitle}
+      </h1>
+    </div>
+  </header>
+  <figure class="flex flex-col gap-4">
+    <Image
+      alt={frontmatter.image.alt}
+      src={frontmatter.image.url}
+      inferSize
+      class="w-full max-h-[35rem] object-cover object-top rounded-xl"
+      loading="eager"
+    />
+    <figcaption class="italic">Fuente: {frontmatter.image.source}</figcaption>
+  </figure>
+  <section class="py-6">
+    <div class="flex flex-row gap-3 items-center justify-between">
+      <div class="flex flex-row gap-3 items-center">
+        {
+          frontmatter.author.image && (
+            <Image
+              alt={frontmatter.author.name}
+              src={frontmatter.author.image}
+              class="w-8 h-8 rounded-full border-2 border-lime-500"
+              width={100}
+              height={100}
+              loading="eager"
+            />
+          )
+        }
+        <p>{frontmatter.author.name}</p>
+      </div>
+      <SocialLinks type={frontmatter.type} slug={frontmatter.slug} />
+    </div>
+  </section>
   <slot />
 </BaseLayout>
