--- a/src/pages/proyectos/[...slug].astro
+++ b/src/pages/proyectos/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from "astro:content";
-import PostLayout from "../../layouts/PostLayout.astro";
+import PostLayout from "../../layouts/ProjectLayout.astro";
 
 export async function getStaticPaths() {
   const blogEntries = await getCollection("projects");
