--- a/src/components/BasicCard.astro
+++ b/src/components/BasicCard.astro
@@ -1,10 +1,10 @@
 ---
 import { Image } from "astro:assets"
-const { title, description, slug, date, id, image, type } = Astro.props
+const { title, description, slug, minimal, image, type } = Astro.props
 ---
 
 <div
-  class="bg-zinc-950 hover:border-lime-400 rounded-lg bg-opacity-45 border border-zinc-700 flex flex-col gap-1.5 transition-all duration-300 ease-in-out "
+  class="bg-zinc-950 hover:border-lime-400 rounded-lg bg-opacity-45 border border-zinc-700 flex flex-col gap-1.5 transition-all duration-300 ease-in-out"
 >
   {
     image && (
@@ -22,10 +22,10 @@ const { title, description, slug, date, id, image, type } = Astro.props
   }
   <div class={`${image ? "px-4 py-3" : "p-4"}`}>
     <h3
-      class="text-lg font-medium text-zinc-100 transition-all duration-300 ease-in-out"
+      class={`${minimal ? 'text-lg' : 'text-base md:text-lg'} font-medium text-zinc-100 transition-all duration-300 ease-in-out`}
     >
       <a class="hover:underline" href={`/${type}/${slug}`}>{title}</a>
     </h3>
-    <p class="text-zinc-300 truncate">{description}</p>
+    <p class={`text-zinc-300 ${minimal ? 'line-clamp-1' : 'line-clamp-2 text-sm md:text-base'}`}>{description}</p>
   </div>
 </div>
