--- a/src/components/BasicHeader.astro
+++ b/src/components/BasicHeader.astro
@@ -4,6 +4,6 @@ const { title, refBtn, titleBtn } = Astro.props as { title: string, refBtn: stri
 ---
 
 <header class="flex justify-between items-center w-full">
-  <h2 class="text-xl font-semibold capitalize">{title}</h2>
+  <h2 class="text-lg sm:text-xl font-semibold capitalize whitespace-nowrap">{title}</h2>
   { refBtn && title && <Link type="more" href={refBtn} text={titleBtn} />}
 </header>
