--- a/src/components/HeaderPage.astro
+++ b/src/components/HeaderPage.astro
@@ -3,6 +3,6 @@ const { title, description } = Astro.props
 ---
 
 <header class="flex flex-col justify-between items-start w-full py-8 gap-3">
-  <h1 class="text-2xl lg:text-3xl font-semibold capitalize">{title}</h1>
-  {description && <h3 class="text-base text-zinc-200">{description}</h3>}
+  <h1 class="text-xl md:text-2xl lg:text-3xl font-semibold capitalize">{title}</h1>
+  {description && <h3 class="text-sm md:text-base text-zinc-200">{description}</h3>}
 </header>
