--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,8 +12,10 @@ const { pageTitle, layout } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     {
-      layout === 'post' && (
-        <link rel="stylesheet" href='/src/styles/postStyles.css' />
+      layout === 'project' ? (
+        <link rel="stylesheet" href='/src/styles/projectStyle.css' />
+      ) : layout === 'post' && (
+        <link rel="stylesheet" href='/src/styles/postStyle.css' />
       )
     }
     <title>{pageTitle}</title>
@@ -50,7 +52,7 @@ const { pageTitle, layout } = Astro.props;
   <body class="bg-zinc-950 text-zinc-100 image-bg p-0 max-w-screen">
     <main class="backdrop-blur-4xl p-0 min-h-screen" >
       <Header />
-      <section class='max-w-screen-2xl mx-auto px-8 pb-20 pt-[4.5rem] min-h-[95vh]'>
+      <section class='max-w-screen-2xl mx-auto px-5 md:px-8 pb-8 pt-[4.5rem] min-h-[95vh]'>
         <slot />
       </section>
       <Footer />
