--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,11 +17,11 @@ const allProjects = (await getCollection("projects")).slice(-3);
 
 <BaseLayout pageTitle="Inicio">
   <main class="flex flex-col gap-14">
-    <section class="py-32 md:py-44 flex flex-col gap-6 xl:max-w-[60%]">
+    <section class="py-24 md:py-32 lg:py-44 flex flex-col gap-6 xl:max-w-[60%]">
       <h1 class="text-3xl lg:text-4xl font-semibold">
         Hola, soy Vicente!
       </h1>
-      <p class="text-base font-base text-zinc-200 inset-1.5">
+      <p class="text-sm md:text-base font-base text-zinc-200 leading-relaxed">
         Soy <span class="text-lime-400">Analista programador</span> y <span
           class="text-lime-400">Desarrollador web full-stack</span
         > con más de 3 años de experiencia desarrollando soluciones full-stack
@@ -38,27 +38,27 @@ const allProjects = (await getCollection("projects")).slice(-3);
             text=""
             icon={true}
           >
-            <LinkedinIcon classes="w-9 fill-zinc-200" />
+            <LinkedinIcon classes="w-7 md:w-9 fill-zinc-200" />
           </Link>
         </li>
         <li>
           <Link
-            href="https://www.linkedin.com/in/vicentejorquera"
+            href="https://github.com/VicenteJ20"
             type="external"
             text=""
             icon={true}
           >
-            <GithubIcon classes="w-9 fill-zinc-200" />
+            <GithubIcon classes="w-7 md:w-9 fill-zinc-200" />
           </Link>
         </li>
         <li>
           <Link
-            href="https://www.linkedin.com/in/vicentejorquera"
+            href="https://x.com/jvicente_20"
             type="external"
             text=""
             icon={true}
           >
-            <TwitterIcon classes="w-9 fill-zinc-200" />
+            <TwitterIcon classes="w-7 md:w-9 fill-zinc-200" />
           </Link>
         </li>
       </ul>
@@ -66,7 +66,7 @@ const allProjects = (await getCollection("projects")).slice(-3);
     <section class="flex flex-col gap-y-4">
       <BasicHeader
         title="últimos posts"
-        titleBtn="Ver todos los posts"
+        titleBtn="Ver todo"
         refBtn="/blog"
       />
       <section class="grid grid-cols-1 md:grid-cols-2 gap-4">
@@ -79,6 +79,7 @@ const allProjects = (await getCollection("projects")).slice(-3);
               date={post.data.pubDate}
               slug={post.data.slug}
               type="blog"
+              minimal
             />
           ))
         }
@@ -87,7 +88,7 @@ const allProjects = (await getCollection("projects")).slice(-3);
     <section class="flex flex-col gap-y-4">
       <BasicHeader
         title="últimos proyectos"
-        titleBtn="Ver todos los proyectos"
+        titleBtn="Ver todo"
         refBtn="/proyectos"
       />
       <section class="flex flex-col gap-4">
@@ -100,6 +101,7 @@ const allProjects = (await getCollection("projects")).slice(-3);
               date={project.data.pubDate}
               slug={project.data.slug}
               type="proyectos"
+              minimal
             />
           ))
         }
