--- a/src/styles/projectStyle.css
+++ b/src/styles/projectStyle.css
@@ -6,7 +6,7 @@
 }
 
 #PostProjectSlot p{
-  @apply text-base font-light py-2 inset-6;
+  @apply text-base font-light py-2 leading-relaxed text-zinc-200;
 }
 
 #PostProjectSlot p a {
@@ -19,4 +19,9 @@
 
 #PostProjectSlot ul li strong{
   @apply text-base font-semibold;
+}
+
+
+#PostProjectSlot pre {
+  @apply px-4 py-2 rounded-lg my-2
 }
