feat/se mejora la descripción

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -10,7 +10,7 @@ const allPosts = await getCollection("posts");
 <BaseLayout pageTitle="Blog">
   <HeaderPage
     title="Blog"
-    description="Aquí encontrarás todas mis posts, siéntete libre de compartirlo con quién quieras."
+    description="Bienvenido/a a mi blog, aquí encontrarás artículos sobre desarrollo web, tecnología, sistemas operativos, programación y más temas relacionados. ¡Espero que te gusten y los compartas en redes sociales!"
   />
   <CardsGrid>
     {
