--- a/src/components/LinkRefIcon.astro
+++ b/src/components/LinkRefIcon.astro
@@ -1,7 +1,23 @@
 ---
-const { url, message } = Astro.props
+const { url, message } = Astro.props;
 ---
 
-<a href={url} target="_blank" rel="noopener noreferrer" class='fill-zinc-300  hover:fill-lime-100 transition-all duration-300 ease-in-out w-8 h-8 block'>
-  <slot />
+<a
+  href={url}
+  target="_blank"
+  rel="noopener noreferrer"
+  class={`fill-zinc-300  hover:fill-lime-100 transition-all duration-300 ease-in-out w-8 h-8 block ${message && "flex flex-row md:flex-col gap-4 items-center w-full hover:underline cursor-pointer"}`}
+>
+  {
+    message ? (
+      <>
+        <span class="block w-8 h-8 md:w-12 md:h-12">
+          <slot />
+        </span>
+        <span class='text-base md:text-xl font-medium md:font-semibold'>{message}</span>
+      </>
+    ) : (
+      <slot />
+    )
+  }
 </a>
